--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
     </properties>
 
     <dependencies>
+        <!-- Für Framework -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>4.3.5.RELEASE</version>
+        </dependency>
+        <!-- Für Tests -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
